@@ -296,7 +296,7 @@ sub formbuilder (@) {
 				my $template=template("passwordmail.tmpl");
 				$template->param(
 					user_name => $user_name,
-					passwordurl => IkiWiki::cgiurl(
+					passwordurl => IkiWiki::cgiurl_abs(
 						'do' => "reset",
 						'name' => $user_name,
 						'token' => $token,
