@@ -11,6 +11,7 @@ ikiwiki (3.20120204) UNRELEASED; urgency=low
     the old hook name is called for now for back-compat.
   * meta: Support keywords header. Closes: #664780
     Thanks, Martin Michlmayr
+  * passwordauth: Fix url in password recovery email to be absolute.
 
  -- Joey Hess <joeyh@debian.org>  Wed, 21 Mar 2012 14:33:14 -0400
 
